tests/errors/test-static-data-member-no-init.script

class A { static int x; };

//>2:22: error C24: a static variable must be initialized.
